7_type_checking/tests/invalid/missing_brace.ennuyeux
fn main() {
    if true {
        print("missing closing brace")
// Error: missing '}'
